# otsdaq-mu2e-stm

./: .gitignore  .ots_setup_type.txt  .rte_stm_readout_setup_ots.sh  CMakeLists.txt  README.md  db_setup_ots.sh  ecl_setup_ots.sh  kinit_setup.sh  mu2e-quick-spack-start.sh  old.setup-env.sh  old_mongodb_setup.sh  reset_ots_tutorial.sh  setup_ots.sh  start_setup.sh
Mu2e-STMDAQ/: .StartOTS_Mu2e-STM_action_quit.cmd  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.inc  STMDAQ_new_module_instructions.txt  run_sim.sh  setup.sh
Mu2e-STMDAQ/MWD/: MWD.cc  MWD.hh  MWD_bitmask.cc  compile.sh  main.cc  multi_file_handler.cc  multi_file_handler.hh  mwd_config.txt
Mu2e-STMDAQ/MWD/baseline_offset_bias/: MWD.cc  MWD.hh  MWD_bitmask.cc  mwd_config.txt
Mu2e-STMDAQ/OLD_BUT_DONT_DELETE_YET/: Makefile  Makefile.inc  setup.sh  startDAQ.sh
Mu2e-STMDAQ/OLD_BUT_DONT_DELETE_YET/MWD/: peaks.txt
Mu2e-STMDAQ/OLD_BUT_DONT_DELETE_YET/NOT_NEEDED/: run_ZS.sh
Mu2e-STMDAQ/OLD_BUT_DONT_DELETE_YET/UDPtesting/: fe_threads.cc  fe_threads.hh  genData.cc  genData.hh  runZS.cc  sendEvents.cc  testUDP.cc  test_funcs.cc  test_funcs.hh
Mu2e-STMDAQ/OLD_BUT_DONT_DELETE_YET/config/: stmdaq.xml
Mu2e-STMDAQ/OLD_BUT_DONT_DELETE_YET/dqm/: Makefile  app.py  app_readHPGEtemp.py  dqm.cc  dqm.hh  dqm_data.py  dqm_map.txt  global_vars.py  tables.py  testDQM.cc
Mu2e-STMDAQ/OLD_BUT_DONT_DELETE_YET/processData/: Makefile  checkData.cc  formEvents.cc  prescale.cc  prescale.hh  zeroSuppress.cc
Mu2e-STMDAQ/OLD_BUT_DONT_DELETE_YET/testing/: best_so_far.cpp  best_so_far_17-01-25.cpp  best_so_far_wComments.cpp  multi_struct.cpp  operation.cpp  signal.cpp  thread_buffer_management.cpp  thread_buffer_management_bpool.cpp  thread_buffer_management_btpool.cpp  thread_buffer_management_checks.cpp
Mu2e-STMDAQ/OLD_BUT_DONT_DELETE_YET/utils/: EnvVars.cc  Logger.hh  Makefile  UDPsocket.cc  UDPsocket.hh  dataVars.cc  dataVars.hh  queue_write.cc  queue_write.hh  xml.hh
Mu2e-STMDAQ/ZS/: compile.sh  main.cc  zero_suppress.cc  zero_suppress.hh  zs_config.txt
Mu2e-STMDAQ/analysis_files/: check.py  checkStreams.py  missing_samples.py  print_diff.py
Mu2e-STMDAQ/baseline/: baseline.cc  baseline.hh  baseline_config.txt  compile.sh  main.cc  plot_adc_baseline_fit.py
Mu2e-STMDAQ/buffers/: CMakeLists.txt  Makefile  buffer_pool.cc  buffer_pool.hh  buffer_queue.cc  buffer_queue.hh  data_struct.hh
Mu2e-STMDAQ/cmake/: STMDAQConfig.cmake  useCET.cmake
Mu2e-STMDAQ/config/: CMakeLists.txt  Makefile  config.hh  stm_data.cc  stm_data.hh  stmdaq.xml
Mu2e-STMDAQ/config/include/: baseline_config.hh  buffer_config.hh  ch_config.hh  dqm_config.hh  fw_config.hh  master_config.hh  mu2e_config.hh  mwd_config.hh  prescale_config.hh  pulseheight_config.hh  tcp_config.hh  udp_config.hh  write_config.hh  zs_config.hh
Mu2e-STMDAQ/config/xml/: baseline.xml  buffers.xml  dqm.xml  firmware.xml  master.xml  mu2e.xml  mwd.xml  operations.xml  ph.xml  prescale.xml  tcp.xml  udp.xml  write_data.xml  zs.xml
Mu2e-STMDAQ/debug/: CMakeLists.txt  Makefile  test_funcs.cc  test_funcs.hh  udp_debug.hh
Mu2e-STMDAQ/dqm/: CMakeLists.txt  Makefile  app.py  dqm_block_writer.hh  dqm_manager.cc  dqm_manager.hh  dqm_manager.tpp  dqm_manager_old.tpp  dqm_shm_block.hh  dqm_structs.hh  shared_memory.py  shm_manager.hh  worker_manager.py
Mu2e-STMDAQ/dqm/assets/: style.css
Mu2e-STMDAQ/dqm/old/: dqm.cc  dqm.hh  dqm.py  new.py  physics.py  test_shm.py
Mu2e-STMDAQ/dqm/pages/: adc_baseline.py  cpu_speeds.py  daq_log.py  examplePage.py  home.py  overview.py  peak_data.py  raw_data.py  station2.py
Mu2e-STMDAQ/exes/: CMakeLists.txt  Makefile  main.cc  recieveTCP.cc  run_sim.cc
Mu2e-STMDAQ/frontend/: CMakeLists.txt  Makefile  main.cc  stm_frontend.cc  stm_frontend.hh
Mu2e-STMDAQ/hardware/: CMakeLists.txt  Makefile  hw_manager.cc  hw_manager.hh
Mu2e-STMDAQ/interfaces/: CMakeLists.txt  operation_provider.cc  operation_provider.hh
Mu2e-STMDAQ/processing/: CMakeLists.txt  Makefile  baseline.cc  baseline.hh  buffer_pool.cc  buffer_pool.hh  check_data.cc  check_data.hh  check_data_new.hh  combine_streams.cc  dqm_manager.cc  dqm_manager.hh  event_builder.cc  event_builder.hh  form_events.cc  form_events.hh  mwd.cc  mwd.hh  noise.cc  noise.hh  operation.cc  operation.hh  operation_manager.cc  operation_manager.hh  operations_base.hh  prescale.cc  prescale.hh  prescale_raw.cc  prescale_raw.hh  pulse_height.cc  pulse_height.hh  tcp.cc  tcp.hh  template_module.cc  template_module.hh  thread_manager.cc  thread_manager.hh  udp.cc  udp.hh  write_manager.cc  (+3 more)
Mu2e-STMDAQ/sim/: CMakeLists.txt  Makefile  gen_data.cc  gen_data.hh  recieveTCP.cc  run_eventSim.cc  run_sim.cc  send_TCP.cc  send_TCP.hh  simfw.cc  simfw.hh
Mu2e-STMDAQ/simdaq/: Makefile  README.txt  gen_eventData.cc  gen_eventData.hh  recieveTCP.cc  run_eventSim.cc
Mu2e-STMDAQ/simfw/: CMakeLists.txt  Makefile  gen_data.cc  gen_data.hh  print_udp.py  run_sim.cc
Mu2e-STMDAQ/testing/: UDPsocket.hh  compile.sh  dataVars.hh  genData.cc  genData.hh  main.cc  tcp_sink.py  test_funcs.cc  test_funcs.hh
Mu2e-STMDAQ/utils/: CMakeLists.txt  DateTime.hh  Destroyer.hh  EnvVars.cc  EnvVars.hh  FastRNG.hh  Hex.hh  Logger.cc  Logger.hh  Makefile  async_logger.cc  async_logger.hh  buffer_pool.cc  buffer_pool.hh  cpu_utils.cc  cpu_utils.hh  data_struct.hh  operations_base.hh  ring_buffer.cc  ring_buffer.hh  shm_manager.cc  shm_manager.hh  signal_handler.cc  signal_handler.hh  stm_data.cc  stm_data.hh  stop_signal.hh  test_funcs.cc  test_funcs.hh  timer.hh  udp.cc  udp.hh
STMDAQ-TestBeam/: CMakeLists.txt  Makefile  Makefile.inc
STMDAQ-TestBeam/frontEnd/: CMakeLists.txt  Makefile_bk.txt  fe_threads.cc  fe_threads.hh  genData.cc  testUDP.cc  test_funcs.cc
STMDAQ-TestBeam/processData/: CMakeLists.txt  checkData.cc  checkData.hh  formEvents.cc  formEvents.hh  zeroSuppress.hh
STMDAQ-TestBeam/utils/: CMakeLists.txt  Logger.cc  Makefile  Random.cc  UDPsocket.cc  UDPsocket.hh  dataVars.hh  dbase.cc  queue.cc  queue.hh  queue_old.cc  queue_old.hh  queue_safe.hh  queue_write.cc  queue_write.hh
(+1101 files in other folders)
